# ROCL

./: .gitignore  Cargo.toml  README.md  cam.cl  desktop.ini  img_add_kernel.cl
.github/: dependabot.yml
OpenCL/: Structs.cl  mathConstants.cl  mathFunctions.cl  render_kernel.cl
src/: apprunner.rs  imageformat.rs  imagerender.rs  img_add_kernel.cl  main.rs  myapp.rs  videorender.rs
