[package]
name = "rocl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
# colorify = { version = "0.2.3", features = ["enable_windows"] }
# crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
# fastrand = "2.0.1"
# iced = { version = "0.12.1", features = ["image", "tokio"] }
image = { version = "0.24.8", features = ["rayon", "rgb", "libwebp", "mp4parse", "benchmarks", "webp-encoder"] }
microbench = "0.5.0"
env_logger = "0.10"
# error-iter = "0.4"
# log = "0.4"
winit = { version = "0.29.15", features = ["rwh_05"] }
winit_input_helper = "0.16"
pixels = "0.13.0"
pollster = "0.3.0"
ocl = { version = "0.19.7", default-features = false, features = ["opencl_version_2_1", "opencl_version_2_0"] }

